--- a/FlowersInventory/InvoiceImport/templates/inventory_graph.html
+++ b/FlowersInventory/InvoiceImport/templates/inventory_graph.html
@@ -8,6 +8,18 @@
     const ctx = document.getElementById('myChart').getContext('2d');
     const product_total_units = JSON.parse("{{ product_total_units|escapejs }}")
     const product_names = JSON.parse("{{ product_names|escapejs}}")
+
+    function getRandomColor() {
+        let letters = '0123456789ABCDEF'.split('');
+        let color = '#';
+        for (let i = 0; i < 6; i++) {
+            color += letters[Math.floor(Math.random() * 16)];
+        }
+        return color;
+    }
+
+    var bg_colors = product_total_units.map(item => getRandomColor())
+
     console.log({product_total_units, product_names})
     const myChart = new Chart(ctx, {
         type: 'bar',
@@ -16,9 +28,7 @@
             datasets: [{
                 label: "Inventory",
                 data: product_total_units,
-                backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                borderColor: 'rgba(75, 192, 192, 1)',
-                borderWidth: 1
+                backgroundColor: bg_colors,
             }]
         },
         options: {
@@ -38,14 +48,8 @@
                         text: 'Flowers',
                         padding: 30
 
-                    },
-                    ticks:{
-                        maxRotation: 0,
-                        minRotation: 0,
-                        autoSkip: false,
                     }
                 }
-
             }
         }
     });
