--- a/InvoiceImport/templates/base/navbar.html
+++ b/InvoiceImport/templates/base/navbar.html
@@ -12,7 +12,7 @@
   <div class="container">
   <a class="navbar-brand" href="{{ home_url }}">
     {% comment %} <img src="http://getbootstrap.com//assets/brand/bootstrap -solid.svg" width="30" height="30" class="d-inline-block align-top" alt=""> {% endcomment %}
-    {%if brand_name %} {{brand_name}} {% else %} Lessly's Flowers {% endif %}
+    {%if brand_name %} {{brand_name}} {% else %} Inventory Flowers {% endif %}
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse"
           data-target="#navbarSupportedContent"
