--- a/InvoiceImport/templates/base/base.html
+++ b/InvoiceImport/templates/base/base.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-{% include 'base/navbar.html' with brand_name="Lessly's Flowers"%}
+{% include 'base/navbar.html' with brand_name="Flowers Inventory"%}
 <div class="container">
     {% block content %}
 
