--- a/InvoiceImport/templates/inventory_view.html
+++ b/InvoiceImport/templates/inventory_view.html
@@ -6,6 +6,7 @@
     <thead class="thead-dark">
     <tr>
         <th> Name:</th>
+        <th> Unit Prices: </th>
         <th> Total Bunches:</th>
     </tr>
     </thead>
@@ -13,6 +14,7 @@
     {% for product in products %}
     <tr>
         <td> {{ product.name }}</td>
+        <td> {{product.unit_price }}</td>
         <td> {{ product.total_units}}</td>
     </tr>
     {% endfor %}
