disabled import navbar option.

--- a/InvoiceImport/templates/inventory_view.html
+++ b/InvoiceImport/templates/inventory_view.html
@@ -14,7 +14,7 @@
     {% for product in products %}
     <tr>
         <td> {{ product.name }}</td>
-        <td> {{product.unit_price }}</td>
+        <td>  $ {{product.unit_price }}</td>
         <td> {{ product.total_units}}</td>
     </tr>
     {% endfor %}
