--- a/InvoiceImport/templates/base/navbar.html
+++ b/InvoiceImport/templates/base/navbar.html
@@ -26,9 +26,9 @@
       <li class="nav-item {% if request.path == home_url %} active {% endif %}">
         <a class="nav-link" href="{{ home_url }}">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item {% if request.path == import_url %} active {% endif %}">
-        <a class="nav-link" href="{{ import_url }}">Import</a>
-      </li>
+<!--      <li class="nav-item {% if request.path == import_url %} active {% endif %}">-->
+<!--        <a class="nav-link" href="{{ import_url }}">Import</a>-->
+<!--      </li>-->
       <li class="nav-item {% if request.path == invoices_url %} active {% endif %}">
         <a class="nav-link" href="{{ invoices_url }}">Invoice Search</a>
       </li>
